# rsmd

./: .gitignore  AUTHORS  Cargo.toml  LICENSE  README.md  benchmark_lj_direct_summation.json  lj_cube_1000.xyz  lj_cube_125.xyz  lj_cube_1331.xyz  lj_cube_2197.xyz  lj_cube_27.xyz  lj_cube_4096.xyz  lj_cube_512.xyz  lj_cube_8.xyz  plot.py
.github/workflows/: benchmark.yml  build_and_test.yml  coverage.txt  coverage.yml  rust.yml
benches/: different_small_benchmarks.rs  lj_direct_summation_benchmark.rs  ndarray_iteration_benchmark.rs  neighbors_cpp_vs_neighbors_z_rust_benchmark.rs  neighbors_vs_neighbors_z_benchmark.rs
bin_benches/: benchmark_noCriterion_lj_sum_4096.rs  do_benchmarks_lj_direct_sum.py  lj_direct_summation_executables_were_made_of.bkp.rs
docs/: contributing.rst
docs/ndarray_iteration_verlet_loop/105/report/: index.html
docs/ndarray_iteration_verlet_loop/155/report/: index.html
docs/ndarray_iteration_verlet_loop/205/report/: index.html
docs/ndarray_iteration_verlet_loop/255/report/: index.html
docs/ndarray_iteration_verlet_loop/305/report/: index.html
docs/ndarray_iteration_verlet_loop/355/report/: index.html
docs/ndarray_iteration_verlet_loop/405/report/: index.html
docs/ndarray_iteration_verlet_loop/455/report/: index.html
docs/ndarray_iteration_verlet_loop/5/report/: index.html
docs/ndarray_iteration_verlet_loop/55/report/: index.html
docs/ndarray_iteration_verlet_loop/loop_elementwise/105/change/: estimates.json
docs/ndarray_iteration_verlet_loop/loop_elementwise/105/new/: benchmark.json  estimates.json  sample.json  tukey.json
docs/ndarray_iteration_verlet_loop/loop_elementwise/105/report/: index.html
docs/ndarray_iteration_verlet_loop/loop_elementwise/155/base/: benchmark.json  estimates.json  sample.json  tukey.json
docs/ndarray_iteration_verlet_loop/loop_elementwise/report/: index.html
docs/ndarray_iteration_verlet_loop/loop_rowwise/report/: index.html
docs/ndarray_iteration_verlet_loop/loop_rowwise_scaled_add/report/: index.html
docs/ndarray_iteration_verlet_loop/loop_zip/report/: index.html
docs/ndarray_iteration_verlet_loop/loop_zip_rowwise/report/: index.html
docs/ndarray_iteration_verlet_loop/report/: index.html
input_files/: lattice_atoms_10.xyz  lj5InclVelocity.xyz  lj_cube_1728.xyz  lj_cube_216.xyz  lj_cube_2744.xyz  lj_cube_3375.xyz  lj_cube_343.xyz  lj_cube_64.xyz  lj_cube_729.xyz
src/: 04.rs  Cargo.toml  atoms.rs  lib.rs  lj_direct_summation.rs  main.rs  neighbors_z_rust_executable.rs  thermo.rs  verlet.rs  xyz.rs
src/md_implementation/: atoms.rs  lj_direct_summation.rs  mod.rs  neighbors.rs  neighbors_z.rs  thermo.rs  verlet.rs  xyz.rs
tests/: integration_tests.rs
(+290 files in other folders)
