[package]
name = "rsmd"
version = "1.32.0"
edition = "2021"

[dependencies]
clippy = {version = "*", optional = true}
ndarray = "0.15.6"
itertools = "0.12.1"
rand_isaac = "0.3.0"

[dev-dependencies]
ndarray-rand = "=0.14.0"
googletest = "=0.2.0"

[features]
default = []
dev = ["clippy"]


[[bin]]
name = "04"
path = "src/04.rs"
