[package]
name = "rsmd"
version = "1.32.0"
edition = "2021"

[dependencies]
clippy = {version = "*", optional = true}
ndarray = "0.15.6"
itertools = "0.12.1"
rand_isaac = "0.3.0"
env_logger = "0.11.3"
log = "0.4.21"
#tikv-jemallocator = "0.5.4"
mimalloc = { version = "*", default-features = false }
ndarray-linalg = "0.16.0"

[dev-dependencies]
ndarray-rand = "=0.14.0"
googletest = "=0.2.0"
criterion = {version = "0.5.1", features = ["html_reports"]}
serde = "1.0.203"
serde_json = "1.0.117"
pprof = { version = "0.3", features = ["flamegraph"] }
  
[build]
rustflags = ["-C", "target-cpu=native"]

[features]
default = []
dev = ["clippy"]


[[bin]]
name = "04"
path = "src/04.rs"

[[bin]]
name = "benchmark_noCriterion_lj_sum_4096"
path = "bin_benches/benchmark_noCriterion_lj_sum_4096.rs"

[[bench]]
name = "lj_direct_summation_benchmark"
harness = false

[[bench]]
name = "ndarray_iteration_benchmark"
harness = false

#[[bench]]
#name = "verlet_benchmark"
#harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
#TODO: maybe add "opt-level = 3"
debug = 1
