[package]
name = "rsmd"
version = "1.32.0"
edition = "2021"

[dependencies]
clippy = {version = "*", optional = true}
ndarray = "0.15.6"
itertools = "0.12.1"
rand_isaac = "0.3.0"
env_logger = "0.11.3"
log = "0.4.21"
#tikv-jemallocator = "0.5.4"
mimalloc = { version = "*", default-features = false }
ndarray-linalg = "0.16.0"
bigint = "4.4.3"
#mpi = { version = "0.8.0", features = ["user-operations", "derive"] }
#ndarray-stats = "0.5.1"

[dev-dependencies]
ndarray-rand = "=0.14.0"
googletest = "=0.2.0"
criterion = {version = "0.5.1", features = ["html_reports"]}
serde = "1.0.203"
serde_json = "1.0.117"
pprof = { version = "0.3", features = ["flamegraph"] }
rand = "0.8.5"

[build]
rustflags = ["-C", "target-cpu=native"]

[features]
default = []
dev = ["clippy"]


[[bin]]
name = "04"
path = "src/04.rs"

[[bench]]
name = "lj_direct_summation_benchmark"
harness = false

[[bench]]
name = "ndarray_iteration_benchmark"
harness = false

[[bench]]
name = "neighbors_vs_neighbors_z_benchmark"
harness = false

#[[bench]]
#name = "verlet_benchmark"
#harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 1
